--- a/.github/workflows/deploy-apk-appcenter.yml
+++ b/.github/workflows/deploy-apk-appcenter.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           npm install formidable@latest
           npm install superagent@latest
+          npm install punycode@latest
 
       - name: Install app center
         run: npm install -g appcenter-cli
